# fast

./: Cargo.toml
.cargo/: config
src/: main.rs
