[package]
name = "fast"
version = "0.2.0"
authors = ["Ferruccio Barletta <ferruccio.barletta@gmail.com>"]
description = "Fetch AWS Session Token"
edition = "2021"

[dependencies]
aws-config = "0.13.0"
aws-sdk-sts = "0.13.0"
clap = { version = "3.2.5", features = ["derive"] }
rust-ini = "0.18.0"
tokio = { version = "1.19.2", features = ["full"] }
